# Adv-BMT

./: pyproject.toml  readme.md  requirements.txt
bmt/: ADV-BMT_dataset_generate.py  __init__.py  cli.py  eval_motion.py  safety_critical_scenario_generation.py  train_init.py  train_motion.py  train_reltok.py  version.py
bmt/dataset/: datamodule.py  dataset.py  make_lmdb.py  preprocess_action_label.py  preprocessor.py  scenarionet_utils.py  test_preprocessing_efficiency.py
bmt/eval/: debug_scenario_metrics.py  evaluate_scenario_metrics.py  lmdb_evaluator.py  scenario_evaluator.py  scenario_metrics_evaluator.py  waymo_eval.py  waymo_motion_prediction_evaluator.py  waymo_sim_agent_evaluator.py  wosac_eval.py
bmt/gradio_ui/: gradio_ui.py  metadrive_render.py  new_ui.py  new_ui_with_scgen.py  plot.py  plot_video.py  video_ui.py
bmt/models/: gpt_scene_encoder.py  motion_decoder.py  motion_decoder_gpt.py  motionlm.py  motionlm_lightning.py  relation.py  scene_encoder.py
bmt/tokenization/: __init__.py  biycle_tokenizer.py  delta.py  gen_tokenizers.py  motion_tokenizers.py  reltok.py
bmt/utils/: __init__.py  autoregressive_rollout.py  debug_tools.py  lr_schedule.py  safety_critical_generation_utils.py  utils.py
cfgs/: 0202_midgpt.yaml  motion_default.yaml
infgen/: merge_shards.py  train_init.py  wosac_eval.py  wosac_eval_async.py
infgen/dataset/: constants.py  dataset.py  make_lmdb.py  preprocess_action_label.py  preprocessor.py  (+2 more)
scripts/: ADV-BMT_dataset_generate.py  ADV-BMT_dataset_generate.sh  ADV-BMT_newADV_generate.py  BMT_MidGPT_train.sh  rename_imports.py
(+65 files in other folders)
