[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adv-bmt"
version = "0.1.0"
description = "Bidirectional Motion Transformer"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = ["numpy>=1.26,<2", "torch>=2.2,<3", "pyyaml>=6,<7"]

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
include = ["bmt*"]

[project.scripts]
bmt-demo = "bmt.cli:main"
